--- a/style.css
+++ b/style.css
@@ -23,9 +23,11 @@
 }
 .border{
     border: 1px solid transparent;
+    padding: 3px;
 }
 .border:hover{
     border: 1px solid white;
+    transition: all 0.2s;
 }
 .address{
     margin-left: 10px;
@@ -45,7 +47,6 @@
 .add-icon{
     display: flex;
     align-items: center;
-
 }
 .navsearch{
     width: 750px;
